sumo/tests/duarouter/errors/network/ok/alts.duarouter
<?xml version="1.0"?>

<!-- generated on 07/10/08 12:40:34 by SUMO duarouter Version 0.9.7
<configuration>

   <input>
      <net-file>net.net.xml</net-file>
      <trip-defs>input_trips.trips.xml</trip-defs>
   </input>

   <output>
      <output-file>routes.rou.xml</output-file>
   </output>

</configuration>
-->

<route-alternatives>
   <vehicle id="0" depart="0">
      <routealt last="0">
         <route cost="10.53" probability="1.00">1 2</route>
      </routealt>
   </vehicle>
</route-alternatives>
